Fixing an AttachmentBroker problem which broke the windows host

A previous change did some cleanup in the remoting codebase however it caused
a crash when we tried to spin up the desktop process:
https://codereview.chromium.org/1903663004/

The issue was that the code in the ipc_utils_win file attempted to register a
broker but did not check to see if one was registered first.  The
DesktopProcess class did register a broker, but did so after this utility
function was called.

BUG=607313

Review-Url: https://codereview.chromium.org/1925263002
Cr-Commit-Position: refs/heads/master@{#390653}

Former-commit-id: 3d4a0c92b0079c32e777933a52b6d8eaf32d0c6e