remoting/host/desktop_process.cc
@@ -102,6 +102,8 @@ bool DesktopProcess::Start(
   DCHECK(!desktop_environment_factory_);
   DCHECK(desktop_environment_factory);
 
+  IPC::AttachmentBrokerUnprivileged::CreateBrokerIfNeeded();
+
   desktop_environment_factory_ = std::move(desktop_environment_factory);
 
   // Launch the audio capturing thread.
@@ -141,11 +143,12 @@ bool DesktopProcess::Start(
 
   // Connect to the daemon.
   daemon_channel_.reset(new IPC::ChannelProxy(this, io_task_runner.get()));
-  IPC::AttachmentBrokerUnprivileged::CreateBrokerIfNeeded();
   IPC::AttachmentBroker* broker = IPC::AttachmentBroker::GetGlobal();
-  if (broker && !broker->IsPrivilegedBroker())
+  if (broker && !broker->IsPrivilegedBroker()) {
     broker->RegisterBrokerCommunicationChannel(daemon_channel_.get());
-  daemon_channel_->Init(daemon_channel_name_, IPC::Channel::MODE_CLIENT, true);
+  }
+  daemon_channel_->Init(daemon_channel_name_, IPC::Channel::MODE_CLIENT,
+                        /*create_pipe_now=*/true);
 
   // Pass |desktop_pipe| to the daemon.
   daemon_channel_->Send(
